# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-18 17:29:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-125

    Summary:
      cms, fix copy and paste
    Revision:
      itools--main--0.12--patch-125


    modified files:
     Changelog cms/Folder.py cms/versioning.py


2005-12-18 17:08:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-124

    Summary:
      cms, change welcome page to profile page (#235)
    Revision:
      itools--main--0.12--patch-124


    modified files:
     Changelog cms/User.py cms/ui/User_profile.xml.en

    renamed files:
     cms/ui/.arch-ids/User_welcome.xml.en.id
       ==> cms/ui/.arch-ids/User_profile.xml.en.id
     cms/ui/User_welcome.xml.en
       ==> cms/ui/User_profile.xml.en


2005-12-16 14:04:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-123

    Summary:
      merge fix from the 0.11 branch
    Revision:
      itools--main--0.12--patch-123

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-68
       xhtml, fix ".translate" when there is non-ascii in the source
    

    modified files:
     Changelog xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.11--patch-68


2005-12-16 08:00:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-122

    Summary:
      merge from herve (#203, #209)
    Revision:
      itools--main--0.12--patch-122

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-207
       add doctype to every template, we'll need them for itools 0.12 not to crash translations and HTML injection with entities.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-209
       use a 20/80 ratio for 800x600 screens.
    

    modified files:
     Changelog cms/ui/CSVRow_edit.xml.en cms/ui/CSVRow_view.xml.en
     cms/ui/CSV_view.xml.en cms/ui/Document_translate.xml.en
     cms/ui/File_download_form.xml.en